# GeoPrivacy

./: LICENSE  README.md  setup.cfg  setup.py
.ipynb_checkpoints/: example-checkpoint.ipynb
Data/: trip_sample.csv
GeoPrivacy/: mechanism.py  metrics.py  processor.py
GeoPrivacy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
