[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Ao Qu
author_email = ao.qu@vanderbilt.edu
description = A python package for implementing geo-indistinguishability privacy mechanisms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quao627/GeoPrivacy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
include_package_data = True